# python-training

./: README.md  pyproject.toml
notebook/: for-statement.ipynb  python-basic1.ipynb
src/python_training/: __init__.py
