[project]
name = "python-training"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsut4", email = "t4tsuy4n_fluffyty@outlook.jp" }
]
dependencies = [
    'jupyter',
    'numpy',
    'matplotlib',
    'scipy'
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_training"]